--- a/src/pages/create/create.html
+++ b/src/pages/create/create.html
@@ -1,7 +1,7 @@
 <ion-header >
   <ion-navbar color="theme1">
     <ion-title >
-      {{ getTitle() }}
+      <span [textContent]="title"></span>
     </ion-title>
   </ion-navbar>
 </ion-header>
